examples/examples_inferred/bad/too_many_args.ez
f x y = x + y;

main = f 1 2 3;